[package]
name = "kiwi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "kiwi"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
strum = { version = "0.26", features = ["derive"] }